# msp430_blinky

./: .gitignore  CMakeLists.txt  README.md  msp430-toolchain.cmake
Blink/: main.c
Blinky/: CMakeLists.txt
blinky/: CMakeLists.txt  main.c
